<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.mycompany</groupId>
    <artifactId>PH1</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>19</maven.compiler.source>
        <maven.compiler.target>19</maven.compiler.target>
        <exec.mainClass>com.mycompany.ph1.PH1</exec.mainClass>
    </properties>
         <dependencies>
    <dependency>
        <groupId>org.hibernate</groupId>
        <artifactId>hibernate-core</artifactId>
        <version>5.6.0.Final</version>
    </dependency>
    <dependency>
            <groupId>com.oracle.database.jdbc</groupId>
            <artifactId>ojdbc8</artifactId>
            <version>21.3.0.0</version>
    </dependency>
    <dependency>
    <groupId>com.toedter</groupId>
    <artifactId>jcalendar</artifactId>
    <version>1.4</version>
    </dependency>
                  <dependency>
                           <groupId>org.eclipse.persistence</groupId>
                           <artifactId>org.eclipse.persistence.core</artifactId>
                           <version>2.7.10</version>
                  </dependency>
                  <dependency>
                           <groupId>org.eclipse.persistence</groupId>
                           <artifactId>org.eclipse.persistence.asm</artifactId>
                           <version>9.2.0</version>
                  </dependency>
                  <dependency>
                           <groupId>org.eclipse.persistence</groupId>
                           <artifactId>org.eclipse.persistence.antlr</artifactId>
                           <version>2.7.10</version>
                  </dependency>
                  <dependency>
                           <groupId>org.eclipse.persistence</groupId>
                           <artifactId>org.eclipse.persistence.jpa</artifactId>
                           <version>2.7.10</version>
                  </dependency>
                  <dependency>
                           <groupId>org.eclipse.persistence</groupId>
                           <artifactId>org.eclipse.persistence.jpa.jpql</artifactId>
                           <version>2.7.10</version>
                  </dependency>
                  <dependency>
                           <groupId>org.eclipse.persistence</groupId>
                           <artifactId>org.eclipse.persistence.moxy</artifactId>
                           <version>2.7.10</version>
                  </dependency>
                  <dependency>
                           <groupId>org.eclipse.persistence</groupId>
                           <artifactId>jakarta.persistence</artifactId>
                           <version>2.2.3</version>
                  </dependency>
                  <dependency>
                           <groupId>org.eclipse.persistence</groupId>
                           <artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>
                           <version>2.7.10</version>
                           <scope>provided</scope>
                  </dependency>
         </dependencies>
</project>